--- a/.github/workflows/Generate Snake.yml
+++ b/.github/workflows/Generate Snake.yml
@@ -14,6 +14,7 @@ on:
     - cron:  "0 0 * * *" 
 
 # 作业, see: https://docs.github.com/zh/actions/using-jobs/using-jobs-in-a-workflow
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,6 +33,15 @@ jobs:
             assets/github-snake.svg
             assets/github-snake-dark.svg?palette=github-dark
             assets/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            
+      # 生成统计图, see: https://github.com/lowlighter/metrics
+      - name: metrics-Half-year-calendar
+        uses: lowlighter/metrics@latest
+        with:
+           base: ""
+           filename: assets/metrics.plugin.isocalendar.svg
+           token: ${{ github.token }}
+           plugin_isocalendar: yes
 
       # 使用 EndBug/add-and-commit 提交代码, see: https://github.com/EndBug/add-and-commit
       - name: Push to GitHub
